Fixed minor spacing error

--- a/src/containers/chat/index.css
+++ b/src/containers/chat/index.css
@@ -49,7 +49,7 @@
 	margin-left: -5px;
 	margin-top: 15px;
 	border: none;
-	padding-left: 15px;
+	padding-left: 20px;
 	font-size: 17px;
 }
 .plus_sign {
